# automotive_misra_cpp

./: .gitignore  CMakeLists.txt  MISRA C++ 2023.properties
.claude/: Skill.md
include/: brake_demo.hpp
src/: brake_demo.cpp  main.cpp
